# Expected-Star-Application

./: Pipfile  README.md  find_exp.py  main.py  pyproject.toml  requirement.txt  scrapper.py
templates/: expected.html  expected_result.html  main_board.html  potato.html  report.html
