[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "pristineamazingviruses"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"
flask = "^1.1"
konlpy = "^0.5.2"
pandas = "^1.0"
selenium = "^3.141"
sklearn = "^0.0.0"
[tool.poetry.dev-dependencies]
